verified revaluation process